# legaldoc

./: pyproject.toml
streamlit/: config.toml
